--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-transition-group": "^4.4.1",
+    "superagent": "^6.0.0",
     "umi": "^3.2.10",
     "yorkie": "^2.0.0"
   }
