--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ant-design/pro-layout": "^5.0.12",
     "@types/classnames": "^2.2.10",
     "@types/react-transition-group": "^4.4.0",
+    "@types/superagent": "^4.1.10",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.2.10",
     "classnames": "^2.2.6",
